--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,4 +1,6 @@
-<div class="todo-item" [ngClass]="{ completed: item?.isCompleted }">
-  <h2>{{ item?.title }}</h2>
-  <input type="checkbox" [checked]="item?.isCompleted" (change)="onToggleComplete()">
-</div>
+<mat-card class="todo-item" [todolistStatusHighlight]="item?.isCompleted">
+    <mat-card-title>{{ item?.title }}</mat-card-title>
+    <mat-checkbox [checked]="!!item?.isCompleted" (change)="onToggleComplete()">
+        completed
+    </mat-checkbox>
+</mat-card>
