--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <todolist-header></todolist-header>
 
 <main>
-    <todolist-todo-list-page></todolist-todo-list-page>
+    <router-outlet></router-outlet>
 </main>
 
 <todolist-footer></todolist-footer>
