lecture: unit tests

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
   <header>
-    <h1 [innerText]="appTitle"></h1>
+    <h1>{{ appTitle }}</h1>
   </header>
 </mat-toolbar>
